First App completed

--- a/JavaScript/01-Intro/index.html
+++ b/JavaScript/01-Intro/index.html
@@ -16,6 +16,7 @@
 <body>
     
     <!-- <script src="index.js"></script> -->
-     <script src="variable.js"></script>
+     <!-- <script src="variable.js"></script> -->
+     <script src="local-global.js"></script>
 </body>
 </html>
