--- a/JavaScript/16-DOM/TO_DO/todo.html
+++ b/JavaScript/16-DOM/TO_DO/todo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - TO DO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
 <body>
     <div class="container p-3">
@@ -21,15 +22,20 @@
                 </form>
             </div>
             <div class="card-body" id="todo-body">
+                <input type="text" id="search" class="form-control" placeholder="Search To Do...">
+                <hr>
                 <ul id="todo-list" class="list-group">
-                    <li class="list-group-item bg-danger text-light">HTML</li>
+                    <!-- <li class="list-group-item bg-danger text-light d-flex justify-content-between align-items-center"><span>HTML</span><i class="fa-solid fa-trash"></i></li>
                     <li class="list-group-item bg-danger text-light">CSS</li>
                     <li class="list-group-item bg-danger text-light">JavaScript</li>
-                    <li class="list-group-item bg-danger text-light">ReactJS</li>
+                    <li class="list-group-item bg-danger text-light">ReactJS</li> -->
                 </ul>
+                <hr>
+                <a href="#" class="btn btn-light" id="clear">Clear Todos</a>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"></script>
     <script src="todo.js"></script>
 </body>
 </html>
