--- a/JavaScript/19-Fetch/fetch.html
+++ b/JavaScript/19-Fetch/fetch.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Fetch</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="d-flex flex-wrap" id="list"></div>
     <script src="fetch.js"></script>
 </body>
 </html>
