Async and await completed

--- a/JavaScript/16-DOM/TO_DO/todo.html
+++ b/JavaScript/16-DOM/TO_DO/todo.html
@@ -22,7 +22,7 @@
                 </form>
             </div>
             <div class="card-body" id="todo-body">
-                <input type="text" id="search" class="form-control" placeholder="Search To Do...">
+                <input type="text" id="search" class="form-control" placeholder="Search To Do..."/>
                 <hr>
                 <ul id="todo-list" class="list-group">
                     <!-- <li class="list-group-item bg-danger text-light d-flex justify-content-between align-items-center"><span>HTML</span><i class="fa-solid fa-trash"></i></li>
